Fixed non-ascii quotation chars

--- a/draft-eckert-ietf-and-energy-overview.mkd
+++ b/draft-eckert-ietf-and-energy-overview.mkd
@@ -293,7 +293,7 @@ The scope of this document
 includes selected work from the IETF, IRTF, and IAB where relevant.
 This document is descriptive in nature and does not propose new work items.
 
-This document captures work until 12/2022, when the “IAB workshop on Environmental Impact of Internet Applications and Systems” contextualized renewed community interest and discussion of the topic.
+This document captures work until 12/2022, when the "IAB workshop on Environmental Impact of Internet Applications and Systems” contextualized renewed community interest and discussion of the topic.
 This memo itself does not recommend or direct future work.
 
 
@@ -320,7 +320,7 @@ refer to the newest version. This approach is meant to allow readers to better u
 the historic timeline in which a specific technology was proposed or introduced. Especially successful
 I* technologies will have newer RFC that updates such initial work.
 
-This document captures work until 12/2022, when the “IAB workshop on Environmental Impact of Internet Applications and Systems” {{?I-D.iab-ws-environmental-impacts-report}}  renewed community discussion of the topic. The workshop emphasized that existing and emerging work could benefit from increased visibility and understanding, but this memo itself does not recommend or direct future work.
+This document captures work until 12/2022, when the "IAB workshop on Environmental Impact of Internet Applications and Systems” {{?I-D.iab-ws-environmental-impacts-report}}  renewed community discussion of the topic. The workshop emphasized that existing and emerging work could benefit from increased visibility and understanding, but this memo itself does not recommend or direct future work.
 
 In addition to this compilation, the authors also share their own observations on what has worked well and what lessons may be drawn from the past.
 
@@ -1229,12 +1229,12 @@ on the same linecard as the interfaces to which the packets would need to be rou
 The 2013 "Towards an Energy-Efficient Internet" {{I-D.winter-energy-efficient-internet}}
 summarizes some of the same work items as this document (as written back in 2013) and
 lists additional more non-adopted drafts.
-It also identified three areas of gaps: “Load-adaptive Resource Management”, “Energy-efficient Protocol Design”, and “Energy-efficiency Metrics and Standard Benchmarking Methodologies”. While these areas remain open, this document records them for reference rather than recommending specific next steps.
+It also identified three areas of gaps: "Load-adaptive Resource Management”, "Energy-efficient Protocol Design”, and "Energy-efficiency Metrics and Standard Benchmarking Methodologies”. While these areas remain open, this document records them for reference rather than recommending specific next steps.
 
 Some aspects for those areas of gaps were partially tackled by later work in the IETF,
 but broadly speaking, most of those areas remain open to a wide range of possible further IETF/IRTF work.
 
-# Authors’ Observations and Lessons Learned
+# Authors' Observations and Lessons Learned
 
    Beyond compiling existing work, the authors consider it valuable to
    briefly reflect on where energy-related activities within the
@@ -1328,4 +1328,4 @@ submit Issues and/or Pull-requests for proposed changes or join the team of auth
 
 07: Added security considerations, updated pointers.
 
-08: Refresh of the I-D, starting with a thorough editorial pass of fixes and improvements. Clarified motivation and scope (IETF/IRTF/IAB), added authors’ observations and lessons learned, emphasized internal audience as first catalog, and applied readibility cleanups.
+08: Refresh of the I-D, starting with a thorough editorial pass of fixes and improvements. Clarified motivation and scope (IETF/IRTF/IAB), added authors' observations and lessons learned, emphasized internal audience as first catalog, and applied readibility cleanups.
